# BOS

./: .gitignore  BOS.iso  Cargo.toml  README.md  build.py  build.rs  functions.txt  kernel.c  kernel.s  loader.ld  loader.s  makefile
.cargo/: config.toml
BOS/: Cargo.toml
IO/: io.h  io.s
atapi/: Cargo.toml
atapi/src/: lib.rs
dma/: Cargo.toml
dma/src/: lib.rs
heap/: Cargo.toml  NOTE.md  build.rs
heap/src/: heap.c  lib.rs
interrupts/: Cargo.toml  lib.rs
interrupts/src/: lib.rs
io/: Cargo.toml  io.asm  lib.rs
io/src/: lib.rs
iso/boot/: kernel.elf  loader.s
iso/boot/grub/: grub.cfg
iso/boot/loader/: loader.ko  loader.sys
kernel/: Cargo.toml  build.rs  kernel.c  kernel.h  kernel.ld  kernel.s  main.rs
kernel/src/: kernel.ld  main.rs
loader/: Cargo.toml  build.rs  i686-unknown-none.json  loader.asm  loader.ld  loader.s
loader/src/: main.rs
memory/: Cargo.toml
memory/src/: lib.rs
paging/: Cargo.toml  lib.rs
paging/src/: lib.rs
ports/: Cargo.toml  lib.rs  ports.asm  ports.s
ports/src/: lib.rs  ports.asm
potrs/: ports.s  potrs.h
result/: Cargo.toml
result/src/: lib.rs
src/: main.rs
tests/: Cargo.toml  NOTE.md
tests/src/: arr_test.rs  io_test.rs  memory_test.rs
