[workspace]
members = [
    # binary
    "loader",
    "kernel",
    # library
    "io",
    "ports",
    "interrupts",
    "paging",
    "dma",
    "atapi",
    "memory", 
    "result",
    # tests
    "tests",
    ]

resolver = "3"

[profile.release]
lto = true
opt-level = "z" 
codegen-units = 1
strip = "symbols"
panic = "abort"
